--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -4,16 +4,24 @@
   "projectType": "application",
   "prefix": "plastik",
   "sourceRoot": "apps/llecoop/src",
-  "tags": ["scope:llecoop", "type:app"],
+  "tags": [
+    "scope:llecoop",
+    "type:app"
+  ],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/llecoop",
         "index": "libs/core/ng-entry-html/util/src/index.html",
         "browser": "apps/llecoop/src/main.ts",
-        "polyfills": ["zone.js", "@angular/localize/init"],
+        "polyfills": [
+          "zone.js",
+          "@angular/localize/init"
+        ],
         "optimization": true,
         "sourceMap": {
           "scripts": true,
@@ -32,11 +40,17 @@
             "output": "/assets/"
           }
         ],
-        "styles": ["apps/llecoop/src/styles/styles.scss"],
+        "styles": [
+          "apps/llecoop/src/styles/styles.scss"
+        ],
         "stylePreprocessorOptions": {
-          "includePaths": ["libs/core/styles/util/material/src"]
+          "includePaths": [
+            "libs/core/styles/util/material/src"
+          ]
         },
-        "allowedCommonJsDependencies": ["moment"],
+        "allowedCommonJsDependencies": [
+          "moment"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -65,6 +79,17 @@
               "with": "apps/llecoop/src/environments/environment.development.ts"
             }
           ]
+        },
+        "staging": {
+          "optimization": false,
+          "extractLicenses": false,
+          "sourceMap": true,
+          "fileReplacements": [
+            {
+              "replace": "apps/llecoop/src/environments/environment.ts",
+              "with": "apps/llecoop/src/environments/environment.staging.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
@@ -77,6 +102,9 @@
         },
         "development": {
           "buildTarget": "llecoop:build:development"
+        },
+        "staging": {
+          "buildTarget": "llecoop:build:staging"
         }
       },
       "defaultConfiguration": "development"
@@ -92,7 +120,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/llecoop/jest.config.ts"
       }
