ci(llecoop): #434 add staging git workflow
ISSUES CLOSED: #434

--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -4,24 +4,16 @@
   "projectType": "application",
   "prefix": "plastik",
   "sourceRoot": "apps/llecoop/src",
-  "tags": [
-    "scope:llecoop",
-    "type:app"
-  ],
+  "tags": ["scope:llecoop", "type:app"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/llecoop",
         "index": "libs/core/ng-entry-html/util/src/index.html",
         "browser": "apps/llecoop/src/main.ts",
-        "polyfills": [
-          "zone.js",
-          "@angular/localize/init"
-        ],
+        "polyfills": ["zone.js", "@angular/localize/init"],
         "optimization": true,
         "sourceMap": {
           "scripts": true,
@@ -40,17 +32,11 @@
             "output": "/assets/"
           }
         ],
-        "styles": [
-          "apps/llecoop/src/styles/styles.scss"
-        ],
+        "styles": ["apps/llecoop/src/styles/styles.scss"],
         "stylePreprocessorOptions": {
-          "includePaths": [
-            "libs/core/styles/util/material/src"
-          ]
+          "includePaths": ["libs/core/styles/util/material/src"]
         },
-        "allowedCommonJsDependencies": [
-          "moment"
-        ],
+        "allowedCommonJsDependencies": ["moment"],
         "scripts": []
       },
       "configurations": {
@@ -81,7 +67,7 @@
           ]
         },
         "staging": {
-          "optimization": false,
+          "optimization": true,
           "extractLicenses": false,
           "sourceMap": true,
           "fileReplacements": [
@@ -120,9 +106,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/llecoop/jest.config.ts"
       }
