--- a/libs/llecoop/util/tsconfig.lib.json
+++ b/libs/llecoop/util/tsconfig.lib.json
@@ -5,14 +5,21 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "composite": true
   },
-  "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
+  "exclude": [
+    "src/**/*.spec.ts",
+    "src/test-setup.ts",
+    "jest.config.ts",
+    "src/**/*.test.ts"
+  ],
   "include": [
     "src/**/*.ts",
     "../../shared/auth/firebase/data-access/src/isLogged.guard.ts",
     "../../shared/auth/firebase/data-access/src/isNotLogged.guard.ts",
     "../../shared/auth/firebase/data-access/src/isAdmin.guard.ts",
-    "../order-list/data-access/src/isAnActiveOrderList.guard.ts"
+    "../order-list/data-access/src/isAnActiveOrderList.guard.ts",
+    "../../../util/src/**/*.ts"
   ]
 }
