--- a/libs/core/table-with-filtering/tsconfig.json
+++ b/libs/core/table-with-filtering/tsconfig.json
@@ -12,12 +12,10 @@
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.lib.json",
-      "composite": true
+      "path": "./tsconfig.lib.json"
     },
     {
-      "path": "./tsconfig.spec.json",
-      "composite": true
+      "path": "./tsconfig.spec.json"
     }
   ],
   "extends": "../../../tsconfig.base.json",
