refactor(llecoop/category/list): #441 review category list styles

--- a/libs/llecoop/order-list/data-access/tsconfig.lib.json
+++ b/libs/llecoop/order-list/data-access/tsconfig.lib.json
@@ -8,12 +8,7 @@
     "types": [],
     "composite": true
   },
-  "exclude": [
-    "src/**/*.spec.ts",
-    "src/test-setup.ts",
-    "jest.config.ts",
-    "src/**/*.test.ts"
-  ],
+  "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
   "include": [
     "src/**/*.ts",
     "../feature/user-order-detail/src/lib/isAnActiveOrderList.guard.ts",
