--- a/libs/llecoop/product/data-access/tsconfig.lib.json
+++ b/libs/llecoop/product/data-access/tsconfig.lib.json
@@ -8,12 +8,7 @@
     "types": [],
     "composite": true
   },
-  "exclude": [
-    "src/**/*.spec.ts",
-    "src/test-setup.ts",
-    "jest.config.ts",
-    "src/**/*.test.ts"
-  ],
+  "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
   "include": [
     "src/**/*.ts",
     "../feature/list/src/lib/product-feature-table.config.ts",
