--- a/libs/shared/auth/firebase/data-access/tsconfig.lib.json
+++ b/libs/shared/auth/firebase/data-access/tsconfig.lib.json
@@ -8,13 +8,6 @@
     "types": [],
     "composite": true
   },
-  "exclude": [
-    "src/**/*.spec.ts",
-    "src/test-setup.ts",
-    "jest.config.ts",
-    "src/**/*.test.ts"
-  ],
-  "include": [
-    "src/**/*.ts"
-  ]
+  "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
+  "include": ["src/**/*.ts"]
 }
