refactor(llecoop/user/list): #442 review user list styles

--- a/libs/llecoop/entities/tsconfig.lib.json
+++ b/libs/llecoop/entities/tsconfig.lib.json
@@ -8,12 +8,6 @@
     "types": [],
     "composite": true
   },
-  "exclude": [
-    "src/**/*.spec.ts",
-    "jest.config.ts",
-    "src/**/*.test.ts"
-  ],
-  "include": [
-    "src/**/*.ts"
-  ]
+  "exclude": ["src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts"],
+  "include": ["src/**/*.ts"]
 }
