docs(llecoop): #452 review and add docs for shared libs
ISSUES CLOSED: #452

--- a/libs/shared/auth/request-password/feature/project.json
+++ b/libs/shared/auth/request-password/feature/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-login-request-password",
+  "name": "auth-request-password",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/auth/request-password/feature/src",
   "prefix": "plastik",
