refactor(llecoop): #454 add submitConfig to FormConfig object
fix it in all instances across llecoop and nasa-images

ISSUES CLOSED: #454

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,5 @@
     }
   },
   "angular.log": "verbose",
-  "editor.formatOnPaste": true,
-  "cSpell.words": ["simondotm"]
+  "editor.formatOnPaste": true
 }
