feat(llecoop/order-list/list): #470 add cancel btn to the order list table actions
ISSUES CLOSED: #470

--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -13,7 +13,7 @@
         "outputPath": "dist/apps/llecoop",
         "index": "libs/core/ng-entry-html/util/src/index.html",
         "browser": "apps/llecoop/src/main.ts",
-        "polyfills": ["zone.js", "@angular/localize/init"],
+        "polyfills": ["apps/llecoop/src/polyfills.ts"],
         "optimization": true,
         "sourceMap": {
           "scripts": true,
