fix(llecoop/order-list/list): #465 fix status col width in md screen sizes
ISSUES CLOSED: #465

--- a/apps/nasa-images/tsconfig.editor.json
+++ b/apps/nasa-images/tsconfig.editor.json
@@ -1,7 +1,9 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "../../libs/shared/button/index.ts"],
   "compilerOptions": {
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "composite": true,
+    "declaration": true
   }
 }
