--- a/apps/llecoop/tsconfig.json
+++ b/apps/llecoop/tsconfig.json
@@ -14,16 +14,13 @@
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.app.json",
-      "composite": true
+      "path": "./tsconfig.app.json"
     },
     {
-      "path": "./tsconfig.spec.json",
-      "composite": true
+      "path": "./tsconfig.spec.json"
     },
     {
-      "path": "./tsconfig.editor.json",
-      "composite": true
+      "path": "./tsconfig.editor.json"
     }
   ],
   "extends": "../../tsconfig.base.json",
