chore(custom): #476 migrate Nx to v 20

--- a/.gitignore
+++ b/.gitignore
@@ -42,11 +42,12 @@ Thumbs.db
 .angular
 .eslintcache
 NX
+.nx/*
+nx-cloud.env
 migrations.json
 .pa11y-report.json
 pa11y-ci-report
 
-.nx/*
 .yarn/*
 
 # firebase
