--- a/libs/llecoop/category/feature/detail/tsconfig.lib.json
+++ b/libs/llecoop/category/feature/detail/tsconfig.lib.json
@@ -9,5 +9,9 @@
     "composite": true
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../../../../../libs/core/**/*.ts",
+    "../../../../../libs/llecoop/category/data-access/**/*.ts"
+  ]
 }
