--- a/libs/shared/auth/firebase/data-access/tsconfig.lib.json
+++ b/libs/shared/auth/firebase/data-access/tsconfig.lib.json
@@ -9,5 +9,9 @@
     "composite": true
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../../../activity/data-access/**/*.ts",
+    "../../../notification/data-access/**/*.ts"
+  ]
 }
