--- a/apps/nasa-images/tsconfig.app.json
+++ b/apps/nasa-images/tsconfig.app.json
@@ -2,10 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["@angular/localize"],
+    "types": [],
     "target": "ES2022",
-    "useDefineForClassFields": false,
-    "composite": true
+    "useDefineForClassFields": false
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
   "include": ["src/**/*.d.ts"],
