--- a/apps/nasa-images/project.json
+++ b/apps/nasa-images/project.json
@@ -13,7 +13,7 @@
         "outputPath": "dist/apps/nasa-images",
         "index": "libs/core/ng-entry-html/util/src/index.html",
         "main": "apps/nasa-images/src/main.ts",
-        "polyfills": ["apps/nasa-images/src/polyfills.ts", "@angular/localize/init"],
+        "polyfills": ["apps/nasa-images/src/polyfills.ts"],
         "tsConfig": "apps/nasa-images/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
