--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 
 env:
-  NX_CLOUD_ACCESS_TOKEN: ${{ env.NX_CLOUD_ACCESS_TOKEN }}
+  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
 
 on:
   push:
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check NX_CLOUD_ACCESS_TOKEN
+        run: echo "NX_CLOUD_ACCESS_TOKEN is set"
+        if: env.NX_CLOUD_ACCESS_TOKEN != ''
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
