fix(shared/form/ui): #485 fix 'should create' spec for input-color-picker.component.spec.ts
ISSUES CLOSED: #485

--- a/.github/workflows/nasa-images-deploy-dev.yml
+++ b/.github/workflows/nasa-images-deploy-dev.yml
@@ -1,8 +1,8 @@
-name: Deploy Nasa Images to staging
+name: Nasa Images deploy staging
 
 on:
   workflow_run:
-    workflows: [CI, pa11y nasa-images]
+    workflows: [CI]
     types: [completed]
     branches:
       - develop
