--- a/apps/llecoop/tsconfig.json
+++ b/apps/llecoop/tsconfig.json
@@ -12,15 +12,16 @@
   },
   "files": [],
   "include": [],
+  "exclude": ["src/**/*.spec.ts"],
   "references": [
+    {
+      "path": "./tsconfig.editor.json"
+    },
     {
       "path": "./tsconfig.app.json"
     },
     {
       "path": "./tsconfig.spec.json"
-    },
-    {
-      "path": "./tsconfig.editor.json"
     }
   ],
   "extends": "../../tsconfig.base.json",
