--- a/libs/shared/form/feature/tsconfig.lib.json
+++ b/libs/shared/form/feature/tsconfig.lib.json
@@ -9,5 +9,5 @@
     "composite": true
   },
   "exclude": ["src/test-setup.ts", "src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "../**/*.ts"]
 }
