--- a/libs/shared/form/ui/input-search-util/tsconfig.spec.json
+++ b/libs/shared/form/ui/input-search-util/tsconfig.spec.json
@@ -4,9 +4,8 @@
     "outDir": "../../../../../dist/out-tsc",
     "module": "commonjs",
     "target": "es2016",
-    "types": ["jest", "node"],
-    "composite": true
+    "types": ["jest", "node"]
   },
   "files": ["src/test-setup.ts"],
-  "include": ["jest.config.ts", "src/**/*.ts", "src/**/*.d.ts"]
+  "include": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
 }
