refactor(llecoop/cms-layout): #487 add a custom layout config library
ISSUES CLOSED: #487

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,8 @@
     }
   },
   "angular.log": "verbose",
-  "editor.formatOnPaste": true
+  "editor.formatOnPaste": true,
+  "[scss]": {
+    "editor.defaultFormatter": "rvest.vs-code-prettier-eslint"
+  }
 }
