--- a/libs/llecoop/order-list/feature/detail/tsconfig.spec.json
+++ b/libs/llecoop/order-list/feature/detail/tsconfig.spec.json
@@ -7,6 +7,9 @@
     "types": ["jest", "node"],
     "composite": true
   },
-  "files": ["src/test-setup.ts"],
+  "files": [
+    "src/test-setup.ts",
+    "src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.ts"
+  ],
   "include": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
 }
