fix(llecoop/user-order/detail): #492 fix missing properties in model form
ISSUES CLOSED: #492

--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -67,7 +67,7 @@
           ]
         },
         "staging": {
-          "optimization": true,
+          "optimization": false,
           "extractLicenses": false,
           "sourceMap": true,
           "namedChunks": true,
