--- a/libs/llecoop/user/feature/list/tsconfig.lib.json
+++ b/libs/llecoop/user/feature/list/tsconfig.lib.json
@@ -9,5 +9,5 @@
     "composite": true
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "../../../../shared/form/ui/input-search-util/src/**/*.ts"]
 }
