--- a/libs/shared/form/util/tsconfig.lib.json
+++ b/libs/shared/form/util/tsconfig.lib.json
@@ -1,13 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../../../../dist/out-tsc",
+    "outDir": "../../../../dist/out-tsc",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
-    "composite": true
+    "types": []
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../../../../shared/form/ui/input-search-util/src/**/*.ts"]
+  "include": ["src/**/*.ts"]
 }
