docs(shared/form): #496 update all form libraries related README files
ISSUES CLOSED: #496

--- a/libs/core/table-with-filtering/tsconfig.lib.json
+++ b/libs/core/table-with-filtering/tsconfig.lib.json
@@ -8,6 +8,15 @@
     "types": [],
     "composite": true
   },
-  "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "exclude": [
+    "src/**/*.spec.ts",
+    "src/test-setup.ts",
+    "jest.config.ts",
+    "src/**/*.test.ts"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "../../shared/form/feature/src/**/*.ts",
+    "../../shared/table/ui/src/**/*.ts"
+  ]
 }
