--- a/libs/shared/form/feature/tsconfig.lib.json
+++ b/libs/shared/form/feature/tsconfig.lib.json
@@ -8,6 +8,16 @@
     "types": [],
     "composite": true
   },
-  "exclude": ["src/test-setup.ts", "src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../**/*.ts"]
+  "exclude": [
+    "src/test-setup.ts",
+    "src/**/*.spec.ts",
+    "jest.config.ts",
+    "src/**/*.test.ts"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "../**/*.ts",
+    "../../../core/entities/src/**/*.ts",
+    "../../core/entities/index.ts"
+  ]
 }
