--- a/libs/llecoop/order-list/feature/detail/tsconfig.spec.json
+++ b/libs/llecoop/order-list/feature/detail/tsconfig.spec.json
@@ -5,7 +5,8 @@
     "module": "commonjs",
     "target": "es2016",
     "types": ["jest", "node"],
-    "composite": true
+    "composite": true,
+    "declaration": true
   },
   "files": ["src/test-setup.ts"],
   "include": [
