--- a/libs/core/detail-item-form/tsconfig.lib.json
+++ b/libs/core/detail-item-form/tsconfig.lib.json
@@ -5,8 +5,9 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "composite": true
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*", "../can-deactivate-guard/src/**/*", "../../shared/form/**/src/**/*"]
 }
