feat(llecoop/user-order/resume): #508 add user order resume page
ISSUES CLOSED: #508

--- a/libs/core/cms-layout/feature/tsconfig.spec.json
+++ b/libs/core/cms-layout/feature/tsconfig.spec.json
@@ -3,11 +3,9 @@
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
     "module": "commonjs",
-    "types": [
-      "jest",
-      "node"
-    ],
-    "composite": true
+    "types": ["jest", "node"],
+    "composite": true,
+    "declaration": true
   },
   "include": [
     "jest.config.ts",
