--- a/libs/llecoop/entities/tsconfig.lib.json
+++ b/libs/llecoop/entities/tsconfig.lib.json
@@ -9,5 +9,5 @@
     "composite": true
   },
   "exclude": ["src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "../../core/entities/src/index.ts"]
 }
