--- a/libs/llecoop/order-list/feature/list/tsconfig.lib.json
+++ b/libs/llecoop/order-list/feature/list/tsconfig.lib.json
@@ -9,5 +9,11 @@
     "composite": true
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../../../../shared/form/ui/input-search-util/src/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../../../../shared/form/ui/input-search-util/src/**/*.ts",
+    "../../../../shared//confirm/data-access/src/index.ts",
+    "../../../../shared/util/**/*.ts",
+    "../../../util/src/**/*.ts"
+  ]
 }
