--- a/libs/llecoop/cms-layout/tsconfig.spec.json
+++ b/libs/llecoop/cms-layout/tsconfig.spec.json
@@ -5,8 +5,16 @@
     "module": "commonjs",
     "target": "es2016",
     "types": ["jest", "node"],
-    "composite": true
+    "composite": true,
+    "declaration": true
   },
   "files": ["src/test-setup.ts"],
-  "include": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": [
+    "jest.config.ts",
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "../../core/cms-layout/**/*.ts"
+  ]
 }
