--- a/libs/llecoop/order-list/feature/user-order-resume/tsconfig.spec.json
+++ b/libs/llecoop/order-list/feature/user-order-resume/tsconfig.spec.json
@@ -10,14 +10,13 @@
   },
   "files": ["src/test-setup.ts"],
   "include": [
-    "../../../../llecoop/util/src/**/*",
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts",
     "src/lib/**/*.ts",
-    "../../../../../libs/shared/**/*.ts",
-    "../../../../../libs/llecoop/entities/src/**/*.ts",
-    "../../../../../libs/llecoop/order-list/util/src/index.ts"
+    "../../../../core/cms-layout/data-access/src/**/*.ts",
+    "../../../../shared/table/ui/src/**/*.ts",
+    "../../**/src/**/*.ts"
   ]
 }
