--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -50,6 +50,7 @@
       "@plastik/llecoop/order-list/order-indicator": [
         "libs/llecoop/order-list/feature/llecoop-order-indicator/src/index.ts"
       ],
+      "@plastik/llecoop/order-list/util": ["libs/llecoop/order-list/util/src/index.ts"],
       "@plastik/llecoop/product/data-access": ["libs/llecoop/product/data-access/src/index.ts"],
       "@plastik/llecoop/product/detail": ["libs/llecoop/product/feature/detail/src/index.ts"],
       "@plastik/llecoop/product/list": ["libs/llecoop/product/feature/list/src/index.ts"],
@@ -58,6 +59,9 @@
       ],
       "@plastik/llecoop/user-order/list": [
         "libs/llecoop/order-list/feature/user-order-list/src/index.ts"
+      ],
+      "@plastik/llecoop/user-order/resume": [
+        "libs/llecoop/order-list/feature/user-order-resume/src/index.ts"
       ],
       "@plastik/llecoop/user/create": ["libs/llecoop/user/feature/create/src/index.ts"],
       "@plastik/llecoop/user/data-access": ["libs/llecoop/user/data-access/src/index.ts"],
