--- a/package.json
+++ b/package.json
@@ -90,18 +90,18 @@
   "private": true,
   "dependencies": {
     "@angular-architects/ngrx-toolkit": "^18.1.1",
-    "@angular/animations": "18.2.9",
-    "@angular/cdk": "18.2.9",
-    "@angular/common": "18.2.9",
-    "@angular/compiler": "18.2.9",
-    "@angular/core": "18.2.9",
+    "@angular/animations": "19.0.3",
+    "@angular/cdk": "19.0.2",
+    "@angular/common": "19.0.3",
+    "@angular/compiler": "19.0.3",
+    "@angular/core": "19.0.3",
     "@angular/fire": "^18.0.1",
-    "@angular/forms": "18.2.9",
-    "@angular/material": "18.2.9",
-    "@angular/material-moment-adapter": "18.2.9",
-    "@angular/platform-browser": "18.2.9",
-    "@angular/platform-browser-dynamic": "18.2.9",
-    "@angular/router": "18.2.9",
+    "@angular/forms": "19.0.3",
+    "@angular/material": "19.0.2",
+    "@angular/material-moment-adapter": "19.0.2",
+    "@angular/platform-browser": "19.0.3",
+    "@angular/platform-browser-dynamic": "19.0.3",
+    "@angular/router": "19.0.3",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@ngrx/component": "18.1.1",
@@ -113,7 +113,7 @@
     "@ngrx/store": "18.1.1",
     "@ngx-formly/core": "^6.3.11",
     "@ngx-formly/material": "^6.3.11",
-    "@nx/angular": "20.1.3",
+    "@nx/angular": "20.2.2",
     "angular-svg-icon": "^18.0.1",
     "babel-loader": "^9.2.1",
     "firebase-admin": "^12.6.0",
@@ -122,18 +122,18 @@
     "ngx-colors": "^3.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "0.14.10"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.2.9",
-    "@angular-devkit/core": "18.2.9",
-    "@angular-devkit/schematics": "18.2.9",
-    "@angular-eslint/eslint-plugin": "^18.3.0",
-    "@angular-eslint/eslint-plugin-template": "^18.3.0",
-    "@angular-eslint/template-parser": "^18.3.0",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "18.2.9",
-    "@angular/language-service": "18.2.9",
+    "@angular-devkit/build-angular": "19.0.4",
+    "@angular-devkit/core": "19.0.4",
+    "@angular-devkit/schematics": "19.0.4",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "19.0.3",
+    "@angular/language-service": "19.0.3",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@jscutlery/cypress-harness": "^0.7.8",
@@ -141,16 +141,16 @@
     "@ngrx/store-devtools": "18.1.1",
     "@ngx-formly/schematics": "^6.3.11",
     "@nrwl/cli": "15.9.3",
-    "@nx/cypress": "20.1.3",
-    "@nx/esbuild": "20.1.3",
-    "@nx/eslint": "20.1.3",
-    "@nx/eslint-plugin": "20.1.3",
-    "@nx/jest": "20.1.3",
-    "@nx/js": "20.1.3",
-    "@nx/node": "20.1.3",
-    "@nx/web": "20.1.3",
-    "@nx/workspace": "20.1.3",
-    "@schematics/angular": "18.2.9",
+    "@nx/cypress": "20.2.2",
+    "@nx/esbuild": "20.2.2",
+    "@nx/eslint": "20.2.2",
+    "@nx/eslint-plugin": "20.2.2",
+    "@nx/jest": "20.2.2",
+    "@nx/js": "20.2.2",
+    "@nx/node": "20.2.2",
+    "@nx/web": "20.2.2",
+    "@nx/workspace": "20.2.2",
+    "@schematics/angular": "19.0.4",
     "@simondotm/nx-firebase": "^2.3.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -186,14 +186,14 @@
     "jest-axe": "^9.0.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "13.1.4",
+    "jest-preset-angular": "14.4.2",
     "jsonc-eslint-parser": "^2.1.0",
     "kill-port": "^2.0.1",
     "markdownlint": "^0.31.0",
     "markdownlint-cli": "^0.36.0",
-    "ng-packagr": "18.2.1",
+    "ng-packagr": "19.0.1",
     "npm-run-all": "^4.1.5",
-    "nx": "20.1.3",
+    "nx": "20.2.2",
     "pa11y-ci": "^3.1.0",
     "postcss": "^8.4.21",
     "postcss-import": "~14.1.0",
@@ -205,7 +205,7 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "typescript": "5.6.3"
   },
   "config": {
     "commitizen": {
