perf(nasa-images): #512 add ngImageOptimizer for nasa images
ISSUES CLOSED: #512

--- a/.github/workflows/e2e-nasa-images.yml
+++ b/.github/workflows/e2e-nasa-images.yml
@@ -1,6 +1,11 @@
 name: Nasa Images e2e
+
 on:
-  workflow_dispatch:
+  workflow_run:
+    workflows: [CI]
+    types: [completed]
+    branches:
+      - develop
 
 jobs:
   e2e:
