--- a/libs/shared/util/formatters/tsconfig.lib.json
+++ b/libs/shared/util/formatters/tsconfig.lib.json
@@ -5,8 +5,9 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "composite": true
   },
   "exclude": ["src/test-setup.ts", "src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "../../../shared/util/objects/src/**/*.ts"]
 }
