feat(core/mat-theme-toggle): #524 add material toggle theme component
ISSUES CLOSED: #524

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -35,6 +35,7 @@
       "@plastik/core/entities": ["libs/core/entities/src/index.ts"],
       "@plastik/core/environments": ["libs/core/util/environments/src/index.ts"],
       "@plastik/core/list-view": ["libs/core/table-with-filtering/src/index.ts"],
+      "@plastik/core/mat-theme-toggle": ["libs/core/mat-theme-toggle/src/index.ts"],
       "@plastik/core/router-state": ["libs/core/router/data-access/src/index.ts"],
       "@plastik/llecoop/category/data-access": ["libs/llecoop/category/data-access/src/index.ts"],
       "@plastik/llecoop/category/detail": ["libs/llecoop/category/feature/detail/src/index.ts"],
