--- a/libs/shared/mat-theme-toggle/project.json
+++ b/libs/shared/mat-theme-toggle/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "mat-theme-toggle",
+  "name": "shared-mat-theme-toggle",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/core/mat-theme-toggle/src",
+  "sourceRoot": "libs/shared/mat-theme-toggle/src",
   "prefix": "plastik",
   "projectType": "library",
-  "tags": ["type:feature", "scope:core"],
+  "tags": ["type:feature", "scope:shared"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/core/mat-theme-toggle/jest.config.ts"
+        "jestConfig": "libs/shared/mat-theme-toggle/jest.config.ts"
       }
     },
     "lint": {
