--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -51,6 +51,7 @@
         "libs/llecoop/order-list/feature/llecoop-order-indicator/src/index.ts"
       ],
       "@plastik/llecoop/order-list/util": ["libs/llecoop/order-list/util/src/index.ts"],
+      "@plastik/llecoop/order-status-chip": ["libs/llecoop/ui/order-status-chip/src/index.ts"],
       "@plastik/llecoop/product/data-access": ["libs/llecoop/product/data-access/src/index.ts"],
       "@plastik/llecoop/product/detail": ["libs/llecoop/product/feature/detail/src/index.ts"],
       "@plastik/llecoop/product/list": ["libs/llecoop/product/feature/list/src/index.ts"],
